--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,9 @@ spring.datasource.password=sijunfeng0801
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=com.example.book.entity
+# 定位模板的目录
+spring.mvc.view.prefix=classpath:/templates/
+# 给返回的页面添加后缀名
+spring.mvc.view.suffix=.html
+spring.thymeleaf.prefix=file:src/main/resources/templates/
+spring.thymeleaf.cache=false
